--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
 /* hide back of pane during swap */
 .front, .back {
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
 
     position: absolute;
     top: 0;
