--- a/style.css
+++ b/style.css
@@ -3,29 +3,50 @@ body {
     margin: 3em;
 }
 
-/* entire container, keeps perspective */
-.flip-container {
+.cards {
+
+}
+
+.card__wrapper {
     perspective: 1000px;
 }
-/* flip the pane when hovered */
-.flip-container:hover .flipper, .flip-container.hover .flipper {
-    transform: rotateY(180deg);
-}
 
-.flip-container, .front, .back {
-    width: 320px;
-    height: 480px;
-}
-
-/* flip speed goes here */
-.flipper {
-    transition: 0.6s;
+.card {
+    margin: 3em 0 3em 0;
+    transition: 0.5s;
     transform-style: preserve-3d;
-
     position: relative;
 }
 
-/* hide back of pane during swap */
+.card_initial {
+    border-left: solid 10px #c99;
+}
+
+.card_to-be-played {
+    border-left: solid 10px #9e9;
+}
+
+.card_played {
+    border-left: solid 10px #ccc;
+}
+
+.card_flipped {
+    transform: rotateY(180deg);
+}
+
+.card, .front, .back {
+    width: 100%;
+    height: 400px;
+}
+
+.front {
+    background: #eee;
+}
+
+.back {
+    background: #999;
+}
+
 .front, .back {
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
@@ -35,68 +56,12 @@ body {
     left: 0;
 }
 
-/* front pane, placed above back */
 .front {
     z-index: 2;
     /* for firefox 31 */
     transform: rotateY(0deg);
 }
 
-/* back, initially hidden pane */
 .back {
     transform: rotateY(180deg);
 }
-
-/*.cards {*/
-    /*perspective: 1000px;*/
-/*}*/
-
-/*.card {*/
-    /*background: #eee;*/
-    /*margin: 3em 0 3em 0;*/
-
-    /*transition: 0.6s;*/
-    /*transform-style: preserve-3d;*/
-    /*!*position: relative;*!*/
-/*}*/
-
-/*.front, .back {*/
-    /*width: 100%;*/
-    /*height: 40%;*/
-
-    /*backface-visibility: hidden;*/
-    /*position: absolute;*/
-    /*top: 0;*/
-    /*left: 0;*/
-/*}*/
-
-/*.front {*/
-    /*z-index: 2;*/
-    /*!* for firefox 31 *!*/
-    /*transform: rotateY(0deg);*/
-/*}*/
-
-/*.back {*/
-    /*transform: rotateY(180deg);*/
-/*}*/
-
-/*.cards:hover .flipper, .cards.hover .flipper {*/
-    /*transform: rotateY(180deg);*/
-/*}*/
-
-/*.card_initial {*/
-    /*border-left: solid 10px #c99;*/
-/*}*/
-
-/*.card_to-be-played {*/
-    /*border-left: solid 10px #9e9;*/
-/*}*/
-
-/*.card_played {*/
-    /*border-left: solid 10px #9e9;*/
-    /*opacity: 0.7;*/
-/*}*/
-
-/*.back {*/
-    /*background: cornflowerblue;*/
-/*}*/
