--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background: #666;
-    margin: 3em;
+    margin: 0;
 }
 
 .cards {
@@ -12,7 +12,8 @@ body {
 }
 
 .card {
-    margin: 3em 0 3em 0;
+    box-sizing: border-box;
+    margin: 10%;
     transition: 0.5s;
     transform-style: preserve-3d;
     position: relative;
@@ -35,7 +36,7 @@ body {
 }
 
 .card, .front, .back {
-    width: 100%;
+    width: 90%;
     height: 400px;
 }
 
