--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background: #666;
-    margin: 0;
+    margin: 10%;
 }
 
 .cards {
@@ -13,7 +13,8 @@ body {
 
 .card {
     box-sizing: border-box;
-    margin: 10%;
+    margin-top: 10%;
+    margin-bottom: 10%;
     transition: 0.5s;
     transform-style: preserve-3d;
     position: relative;
@@ -36,7 +37,7 @@ body {
 }
 
 .card, .front, .back {
-    width: 90%;
+    width: 100%;
     height: 400px;
 }
 
