--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
     background: #666;
-    margin: 10%;
+    margin: 0;
 }
 
 .cards {
-
+    white-space: nowrap;
 }
 
 .card__wrapper {
@@ -12,9 +12,6 @@ body {
 }
 
 .card {
-    box-sizing: border-box;
-    margin-top: 10%;
-    margin-bottom: 10%;
     transition: 0.5s;
     transform-style: preserve-3d;
     position: relative;
@@ -29,16 +26,11 @@ body {
 }
 
 .card_played {
-    border-left: solid 10px #ccc;
+    border-left: solid 5vw #ccc;
 }
 
 .card_flipped {
     transform: rotateY(180deg);
-}
-
-.card, .front, .back {
-    width: 100%;
-    height: 60vh;
 }
 
 .front {
@@ -66,4 +58,45 @@ body {
 
 .back {
     transform: rotateY(180deg);
+}
+
+
+/* Vertical */
+
+.cards.cards_vertical {
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+.cards_vertical .card, .cards_vertical .front, .cards_vertical .back {
+    width: 75vw;
+    height: 60vh;
+}
+
+.cards_vertical .card {
+    margin: 10vw auto;
+}
+
+
+/* Horizontal */
+
+.cards.cards_horizontal {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    padding-top: 7.5vh;
+    padding-left: 5vw;
+    height: 100vh;
+}
+
+.cards_horizontal .card__wrapper {
+    display: inline-block;
+    margin: auto 5vw;
+}
+
+.cards_horizontal .card, .cards_horizontal .front, .cards_horizontal .back {
+    width: 60vw;
+    height: 85vh;
+}
+
+.cards_horizontal .card {
 }
